Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-6210

Master redirect with suffix gets in redirect loop

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.1.0
    • HTTP API

    Description

      Trying to go to a URI like http://SOME_MASTER:5050/master/redirect/master/frameworks ends up in a redirect loop.

      The expected behavior is to either not support anything after redirect in the path (redirect must be handled by a smart client), or to redirect to the suffix (redirect can be handled by a dumb client).

      Attachments

        Issue Links

          Activity

            People

              drcrallen Charles R Allen
              drcrallen Charles R Allen
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: