Add smarter master redirects. * Fix MESOS-6210 * Any path after `/redirect` is now appended to the response * Does not make any guarantees about non-path components of the original request * Updated docs to clarify this behavior.